stylesheets/urban.css
/* FONT STYLES

Regular:400; Semibold:600
font-family: 'IBM Plex Mono', monospace;

Regular:400
font-family: 'IBM Plex Serif', serif;

Bold: 700; Regular: 400; Light:300; Extra-Light: 200
font-family: 'Muli', sans-serif;

*/
h1, h3{
	font-family: 'IBM Plex Mono';
	font-weight: 600;
	margin: 0;
}

h2{
	font-weight: normal;
}
h3 {
	font-size: 0.8em;
}
body{
	margin: 0;
	background-color: #F8F8F8;
	color: #000000;
	display:flex ;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
a{
	color: #4A90E2;
	text-decoration: none;
}
img{
	width: 100%;
	height: auto;
}
ol{
	padding-left: 1em;
}

.meta{
	font-family: 'Muli';
	font-weight: 400;
	color: #4A4A4A;
	text-decoration: none;
	font-size: 16px;
}
.caption{
	margin-top: 20px; 
	font-family: 'Muli';
	font-weight: 200;
	font-size: 16px;
	color: #9B9B9B;
}


.header{
	top: 0;
	left: 0;
	z-index: 999;
	position: fixed;
	padding-top: 60px;
	padding-left: 150px;
	padding-right: 150px;
	margin: 0;
	width: calc(100% - 300px);
	background-color: #F8F8F8;
	font-size: 24px;
}
.header .wrapper{
	border-bottom-style: solid;
	display: inline-block;
	width: 100%;
	margin-bottom: 0;
}
.header .wrapper .name{
	float: left;
}
.header .wrapper .about{
	float: right;
}
.spacer {
	width: 100%;
	height: 162px; 

}

.brief{
	margin-left: 150px;
	margin-right: 150px;
	display:flex;
}
.brief .info{
	flex-direction: column;
	flex:1;
	margin-left: 0;
}
.brief .info .block{
	flex: 1;
	margin-top: 10px;
	margin-bottom: 45px;
}
.brief .info .block .label{
	font-family: 'IBM Plex Serif';
	font-size: 10px;
	color: #4A4A4A
}
.brief .info .block .text{
	font-family: 'Muli';
	font-weight: 400;
	color: #4A4A4A;
	font-size: 16px;
}
.brief .description{
	flex: 2;
	flex-direction: column;
}
.brief .description .slogan{
	flex: 1;	
	font-family: 'IBM Plex Mono';
	font-weight: 600;
	color: #000000;
}
.brief .description .proposal{
	flex: 1;
	font-family: 'IBM Plex Serif';
	font-size: 24px;
	margin-right: 175px;
}

.section{
	display: flex;
	flex-direction: column;
	width: 54%;
	margin-top: 100px;
	min-height: 0;
	min-width: 0;
}
.section .headline{
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: 100%;
}
.section .headline .category{
	font-family: 'IBM Plex Mono';
	font-weight: 600;
	font-size: 12px;
	color: #000000;
	letter-spacing: 0.8px;
}

.section .headline .tagline{
	font-family: 'IBM Plex Serif';
	font-size: 24px;
	color: #000000;
	width: 80%;
	text-align: center;
}

.section .text_body{
	display: flex;
	flex-direction: column;	
	font-family: 'Muli';
	font-weight: 400;
	font-size: 16px;
	min-width: 0;
	min-height: 0;
	color: #4A4A4A;
}

.image_wrapper{
	margin-left: 150px; 
	margin-right: 150px;
	min-width: 0;
	min-height: 0;
}

.section .text_body .image_side_by_side{
	display: flex;
	min-width: 0;
	min-height: 0;
	width: 100%;
}

.img_wrapper1{
	flex: calc(3024/2704);
	margin-right: 10px;
}
.img_wrapper2{
	flex: calc(4032/3024);
	margin-left: 10px;
}

.footer{
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 60%;
}
.footer .links{
	display:flex;
	justify-content: space-around;
	width: 100%;
}
.footer .links a{
	margin-top: 55px;
	font-family: 'IBM Plex Serif';
	font-size: 18px;
	color: #9B9B9B;
}

.footer .social{
	margin-top: 100px;
	width: 125px;
	display: flex;
	justify-content: center;
}

.footer .byline{
	display:flex ;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin-top: 20px;
	margin-bottom: 85px;
	font-family: 'Muli';
	font-weight: 200;
	font-size: 12px;
	color: #9B9B9B;
	width: 100%;
}

.not_active {
  pointer-events: none;
  cursor: default;
  text-decoration: none;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

